# clapy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
clapy/: __init__.py  _errors.py  argument.py  command.py  parsed_command.py  style.py
tests/: clapy_test.py  help_output_test.py  logic_test.py
