[project]
name = "clapy"
version = "0.1.0"
authors = [{name = "Pablo Vidal", email = "darthpapalo@gmail.com"}]
description = "Simple command line argument parser."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
rich = [
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "clapy"
module-root = ""

[tool.ty.src]
include = ["./clapy/"]

[tool.pytest]
testpaths = ["tests"]
